--- a/assets/css/templatemo-edu-meeting.css
+++ b/assets/css/templatemo-edu-meeting.css
@@ -158,7 +158,7 @@ body {
 .main-button-red a {
   font-size: 13px;
   color: #fff;
-  background-color: #1e3a8a;
+  background-color: #8b1538;
   padding: 12px 30px;
   display: inline-block;
   border-radius: 22px;
@@ -1383,7 +1383,7 @@ section.contact-us #contact textarea {
 section.contact-us #contact button {
   font-size: 13px;
   color: #fff;
-  background-color: #1e3a8a;
+  background-color: #8b1538;
   padding: 12px 30px;
   display: inline-block;
   border-radius: 22px;
@@ -1399,7 +1399,7 @@ section.contact-us #contact button:hover {
 }
 
 section.contact-us .right-info {
-  background-color: #1e3a8a;
+  background-color: #8b1538;
   border-radius: 20px;
   padding: 40px;
 }
@@ -1521,7 +1521,7 @@ section.meetings-page .filters li {
 
 section.meetings-page .filters ul li.active,
 section.meetings-page .filters ul li:hover {
-  background-color: #1e3a8a;
+  background-color: #8b1538;
   color: #fff;
 }
 
@@ -1562,7 +1562,7 @@ section.meetings-page .main-button-red a {
 
 section.meetings-page .pagination ul li.active a,
 section.meetings-page .pagination ul li a:hover {
-  background-color: #1e3a8a;
+  background-color: #8b1538;
   color: #fff;
 }
 
